--- a/index.html
+++ b/index.html
@@ -7,9 +7,18 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>oi, nalu</h1>
-    <h2>você é linda </h2>
-    <h2>(muito mais do que ce imagina)</h2>
-    <h3>e eu te amo</h3>
+    <div class="container">
+        <h1>oi, nalu :)</h1>
+        <details>
+            <summary>pra você lembrar sempre ❤</summary>
+            <p>Você é linda (muito)</p>
+            <p>É autêntica</p>
+            <p>Talentosa</p>
+            <p>carinhosa (obrigado por isso)</p>
+            <p>e muuuuito mais coisa boa</p>
+            <p>Nunca deixa ninguém te falar o contrário, ta?</p>
+        </details>
+        <h2>feito com ❤ pelo davi (te amo)</h2> 
+    </div>
 </body>
 </html>
